json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,55 @@
 {
  "items": [
   {
+    "id": "lDkzmeDPQoeCeevrpeygjQ",
+    "url": "https://remote.com/jobs/browse/preview/ios-app-developer-2",
+    "title": "iOS App Developer",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=2, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "SimpleRent.com.au",
+      "sameAs": "simplerent.com.au"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 18000,
+      "maxValue": 36000,
+      "info": "",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 25, 2018 12:03:45 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Full time<br /><br />LOCATION:<br />Remote<br />Anywhere in<br />Philippines<br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: SimpleRent.com.au; 1-10 employees; 0-25% remote;<br /><br />Work with our enterprise level software dev team to build out the app version of our software platform. <br /><br />You will have experience connecting apps to REST API's",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "_9WxwmxESdW6QaktPvMLfw",
     "url": "https://remote.co/job/staff-ios-engineer/",
     "title": "Staff iOS Engineer",
