--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,116 @@
 {
  "items": [
   {
+    "id": "mk2BT52CQKy8-fc_n5kjIg",
+    "url": "https://remote.co/job/online-english-teacher-4/",
+    "title": "Online English Teacher",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Qkids",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 16,
+      "maxValue": 20,
+      "info": "",
+      "unit": "HOUR",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 25, 2018 3:00:20 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Online English Teacher at <span>Qkids</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> Part-time </span></div><div>            <h4><strong>Position Details</strong><strong>&nbsp;</strong></h4><p><strong>Position title</strong>: Online English Teacher<br><strong>Rate</strong>: $16-20 USD/hr (2 lessons)<br><strong>Location</strong>: Remote, online (U.S. and Canada)<br><strong>Start date</strong>: Immediately<br><strong>Contract type</strong>: Independent Contractor<br><strong>Contract term</strong>: Flexible</p><h4><strong>Your Work&nbsp;</strong></h4><ul><li>Teach English to young learners between 5-12 years of age through our online platform</li><li>Our Class Coordination Team will handle scheduling and student assignment</li><li>Teachers will be teaching classrooms with up to 4 students</li><li>The curriculum is preset, no lesson planning required</li><li>Each in-lesson time is 30 minutes</li><li>Training and support provided</li></ul><h4><strong>Requirements</strong><strong>&nbsp;</strong></h4><ul><li>Eligible to legally work in the U.S. or Canada</li><li>Earned a Bachelor’s degree or currently enrolled in a university program</li><li>Digital literacy and the ability to lead an engaging learning atmosphere</li><li>Prior teaching experience or equivalent in education, tutoring, mentoring, homeschooling preferred</li><li>English teaching certificates (TESOL, TEFL, CELTA, ESL) preferred</li><li>Technical requirements: a computer with stable internet connection and clear audio/video capacity</li><li>The minimum time commitment is 6 hours weekly</li></ul><h4><strong>Regular class time slots: 19 hrs</strong></h4><p>7 days a week (AM – EST):<br>6:40-7:10, 7:20-7:50, 8:00-8:30, 8:40-9:10<br>Plus Friday and Saturday (PM – EST):<br>8:40-9:10, 9:20-9:50, 10:00-10:30, 10:40-11:10, 11:20-11:50</p><h4><strong>Additional summer time slots (June 24th – August 30th EST): 12.5 hrs</strong></h4><p>Sunday – Thursday (PM-EST):<br>8:40-9:10, 9:20-9:50, 10:00-10:30, 10:40-11:10, 11:20-11:50</p><p><strong>*Payment: </strong>the base rate for our teachers is $16 USD per hour, equivalent to 2 lessons. There are attendance and performance bonuses, $1USD each, calculated weekly. With full bonuses, the pay is $20 USD per hour.<strong>&nbsp;</strong></p><h4><strong>About Qkids&nbsp;</strong></h4><p>Qkids is an interactive online teaching platform that connects English teachers to young language learners in real time with fun, user-friendly software. Founded in 2015, we are now a national leader in cross-cultural E-learning with over 100,000 Chinese elementary and secondary students. Connected on our patented and effective game-based learning platform, English teachers from the United States and Canada guide students through a curriculum of fun, dynamic, and engaging narrative gaming adventures from the comfort of their own homes. We are ready to build lasting growth for both learners and teachers, and we pride ourselves on providing the authentic North American classroom experience for our students in China. https://www.facebook.com/JoinQkids/<em>&nbsp;</em></p><p><em>This opportunity: Contract, Part-time, Work from home, remote, Online, Work online, Tutor, English Teacher, Students, stay at home, qkids, teach online</em></p>        </div><div>        <a href='http://teacher.qkids.net/remoteco' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "ccMMJSGxRzqxirrJTZO2WA",
+    "url": "https://angel.co/secured-universe/jobs/73426-kernel-hacker",
+    "title": "Kernel Hacker",
+    "tags": [
+      "ARM Assembly",
+      "C",
+      "C++",
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:arm/embedded/16",
+      "DBG_TECH1:k/t/w:assembly/c/3",
+      "DBG_TECH1:k/t/w:c++/c/8",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:embedded/c/1",
+      "DBG_TECH1:k/t/w:embedded/embedded/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=17, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=24, frontend=0}",
+      "Full Time",
+      "Linux Kernel/drivers.",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Diego",
+      "Software Engineer",
+      "TECH1/c",
+      "TECH1/embedded",
+      "TITLE1/unknown",
+      "TZ/unknown",
+      "X86 Assembly/machine Code"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c",
+      "embedded"
+    ],
+    "hiringOrganization": {
+      "name": "Secured Universe",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 40000,
+      "maxValue": 120000,
+      "info": "0.0% – 5.0%",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 24, 2018 11:41:23 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>Kernel Hacker at Secured Universe</h2><div>San Diego, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>C++, C, Linux Kernel/drivers., ARM Assembly, X86 Assembly/machine Code</div><div>Compensation</div><div>$40k – $120k<br>0.0% – 5.0%</div></div><h3>Job Description</h3><div><p>Intimately familiar with the linux kernel with at least 5 years experience actual kernel/driver development.  Embedded/ARM a plus, and you should be extremely comfortable with assembly.</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "lUTbltIlQy-_nF5fAfc92Q",
     "url": "https://weworkremotely.com/remote-jobs/the-vaan-group-e-commerce-producer",
     "title": "The Vaan Group: E-Commerce Producer",
