json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,202 @@
 {
  "items": [
   {
+    "id": "I-SJ8zrHT4iuaG8AEuaD9g",
+    "url": "https://remote.co/job/disaster-relief-calls-inbound-representative/",
+    "title": "Disaster Relief Calls, Inbound Representative",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``from 4W your 2W home",
+      "DBG_TECH1:k/t/w:internet-explorer/frontend/2",
+      "DBG_TECH1:k/t/w:windows/dotnet/48",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=48, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=2}",
+      "REMOTE1/50",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "Direct Interactions",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2018 6:25:40 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Disaster Relief Calls, Inbound Representative at <span>Direct Interactions</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> Part-time </span></div><div>            <p><strong>Introduction to Direct Interactions</strong></p><p>Based in Seattle, Direct Interactions provides contact center solutions using American agents that&nbsp;<strong>work from home</strong>. We are socially responsible in our business practices and seek to provide great at-home work opportunities for all Americans, including people with disabilities. Our clients rely on Direct Interactions to support their customers by telephone and email while representing their brands with care and professionalism.</p><p><strong>About the Position</strong></p><p>Help those in need from the comfort of your own home!</p><p>Direct Interactions is partnering with American Red Cross efforts for Hurricane Florence! You can help those recovering from Hurricane Florence. Take inbound calls from those impacted by Hurricane Florence after a short self-paced training and by passing a short (online) course on call taking and finding answers.</p><p><strong>Requirements:</strong></p><ul><li>Laptop or Desktop Computer running Windows Operating System Windows 7 or Windows 8.1 or Windows 10. Chromebook, Microsoft Surface,Tablet/ipads, Vista. Due to the discontinuation of Windows XP Support and updates by Microsoft Windows XP is no longer supported by our client’s software.</li><li>Internet Explorer 7 or greater required with Mozilla Firefox as needed.</li><li>DSL or Cable internet (Wireless and Satellite are not compatible with our software)</li><li>Current antivirus and antispyware</li><li>Installed, operational firewall</li></ul><p><strong>Summary of Essential Skills</strong></p><ul><li>Excellent verbal communication skills including grammar and voice quality</li><li>Ability to remain poised under pressure for back to back calls</li><li>Ability to show empathy for their frustrations or concerns and resolve the issue in a timely fashion</li><li>Documentation, data entry, organization and problem-solving skills are desirable</li><li>Ability to handle detailed work with a high degree of accuracy and speed</li><li>Ideally able to respond and be ready to take calls within 1-2 hours of notification</li></ul><p><strong>Pay Rate:</strong></p><p>Your state minimum wage</p><p><strong>Shifts</strong>:</p><p><strong>Pick your own hours for a minimum of 15 hours per week within the hours of operation listed below:</strong></p><ul><li>Monday-Friday 7:30 AM-10 PM EST</li><li>Saturday 7:30 AM-8 PM EST</li><li>Sunday 10:00 AM- 6 PM EST</li></ul><p><strong>Certification:</strong></p><p>Expected to start October 10 and is self-paced.</p>        </div><div>        <a href='https://chp.tbe.taleo.net/chp04/ats/careers/v2/viewRequisition?org=DIREINTE&amp;cws=37&amp;rid=25' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "9mr-wY5ATcaYX-qgmEm-TA",
+    "url": "https://remote.co/job/medical-events-liaison-2/",
+    "title": "Medical Events Liaison",
+    "tags": [
+      "DBG:surround``2N( OR(feasibl,OR(consid,consider),occas,possibl), remot)",
+      "DBG:surround``3N(locat,remot)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG_TECH1:k/t/w:classification/bigdata-ml/1",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=1, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "Johnson & Johnson Vision",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2018 5:49:01 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Medical Events Liaison at <span>Johnson &amp; Johnson Vision</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Locations: </strong>Santa Ana, California</p><p><strong>Functions:</strong> Quality Assurance</p><p>Santa Ana, California, United States</p><p><strong>Requisition ID:</strong> 4111180613</p><p>Johnson &amp; Johnson Vision (JJV), a member of Johnson &amp; Johnson’s Family of Companies is recruiting for Medical Events Liaison, to be located in Santa Ana, CA&nbsp;<strong>with consideration for remote locations in the United States.</strong></p><p>JJV, is a worldwide company with operations in the United States, Japan, Latin America, Asia-Pacific and Europe/Middle East/Africa regions. Research, innovation and new-product development are the focus of our organization. Since we introduced soft disposable contact lenses in 1988, and through the acquisition of Abbott Medical Optics in 2017, no other manufacturer has matched the aggressive expansion of our wide-ranging Surgical Vision (Cataracts and Lasik portfolio) and Vision Care (ACUVUE and Consumer Eye Health solutions) family of products. Our associates around the world are committed to expanding the JV brand, and fortifying our position as the worldwide leader in total eye healthcare solutions.</p><p>Caring for the world, one person at a time has inspired and united the people of Johnson &amp; Johnson for over 125 years. We embrace research and science — bringing innovative ideas, products and services to advance the health and well-being of people. Employees of the Johnson &amp; Johnson Family of Companies work with partners in health care to touch the lives of over a billion people every day, throughout the world.</p><p><strong>You, the Medical Events Liaison will:</strong></p><ul><li>Chairs and participates in the rapid response team cross functional meetings and facilitates discussion and workflow.</li><li>Prioritizes, coordinates, develops and conveys responses (verbal and/or written) to customer complaints summarizing investigation status updates and investigation summaries/conclusions.</li><li>Uses clinical ophthalmic experience to act as a liaison and key resource for customers and eye care professionals regarding product performance issues; train eye care professionals and other product safety personnel on use of products in accordance with approved labeling</li><li>Positively interacts with the customer and eye care professionals, educates and advises on proper use of JJ Vision products.</li><li>Acts as a partner for the commercial team with escalated issues</li><li>Coordinates and dictate the cadence or prioritization of investigations in association with manufacturing sites and complaint lab</li><li>Handles calls determined to be difficult or highly sensitive (during triage) from eye care professionals and patients and process those complaint folders per procedural guidelines</li><li>Intakes, evaluates and makes MDR/Global vigilance reporting decisions related to customer complaints</li><li>Reviews medical complaints, assigns appropriate classification, manages workflow and determines filing requirements. Files / submits regulatory reports to the appropriate worldwide regulatory bodies within the required time lines</li><li>Coordinates and leads responses to FDA Additional information letters and responses to other Health Authority or Notified Bodies</li><li>Supports MDR/global reportability decisions with clinically sound justification. Documents this justification in position papers.</li><li>Supports audit related activities pertaining to complaints and MDR determination rationales etc.</li><li>Adheres to GMP regulations within complaint and medical files and other documents within the department.</li><li>Peer review / audit of medical reportable files ensuring accurate submission to regulatory bodies.</li><li>Leads or participates in other activities as required including reviewing new / emerging regulations, project teams, training new associates, process improvements, etc.</li><li>Works in a cooperative and collaborative manner with fellow team members through constructive communication, flexibility, and exhibits a willingness to assist other team members.</li></ul><p><strong>Qualifications</strong></p><p><strong>Qualifications</strong></p><ul><li><strong>RN or BS Degree preferred </strong>or 3-5 years related medical experience in an Ophthalmic surgery center</li><li>3-5 years medical device related experience</li><li>Minimum of 6 years work experience.</li><li>Strong written and oral communication skills in English.</li><li>Strong interpersonal and organizational skills</li></ul><p>Johnson &amp; Johnson Family of Companies are equal opportunity employers, and all qualified applicants will receive consideration for employment without regard to race, color, religion, sex, sexual orientation, gender identity, genetic information, national origin, protected veteran status, disability status, or any other characteristic protected by law.</p><p>Primary Location: United States-California-Santa Ana<br>Organization: AMO US Holdings, Inc.. (6234)<br>Job Function: Quality Assurance<br>Requisition ID: 4111180613</p>        </div><div>        <a href='https://jobs.jnj.com/jobs/4111180613?lang=en-us' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "8gmJIDn7SxC4jCEBmCxNKw",
+    "url": "https://remote.co/job/transcriptionists-7/",
+    "title": "Transcriptionists",
+    "tags": [
+      "DBG:surround``from 4W your 2W home",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "TranscribeMe",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2018 4:58:50 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Transcriptionists at <span>TranscribeMe</span></h2><div><span><i></i> Remote</span>         | <span> Entry-level </span> | <span> Freelance </span> | <span> International </span> | <span> Part-time </span></div><div>            <p>Join TranscribeMe and monetize your downtime!</p><p>Transcribe audio and video into perfect quality text and get paid for it! It’s that easy. Take control of your own career today from the comfort of your own home. Choose the hours that fit your lifestyle. We offer the opportunity to be a part of our unique community and create lasting connections with professionals all over the world. All you need is a computer, a reliable Internet connection, and the ability to transcribe audio and video in any of the languages that we support. Join TranscribeMe now!</p><p><strong>See more at:</strong> http://transcribeme.com/crowd/</p>        </div><div>        <a href='https://workhub.transcribeme.com/Account/Register' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "dUrLqbNnTAeocOxK2dCFaA",
+    "url": "http://jobmote.com/jobs/26187-jde-e1-senior-jde-e1-sr-cnc-remote-position-direct-hire",
+    "title": "JDE E1 Senior JDE E1 Sr. CNC - Remote position - Direct hire",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:sql-server/dotnet/2",
+      "DBG_TECH1:k/t/w:windows/dotnet/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=18, c=0, mobile=1, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=2, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "Tri-S Recruiters, Inc.",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 26, 2018 11:20:44 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Fantastic, REMOTE, direct-hire (non-contract) position for a Sr level CNC professional.</p><p>This position does require travel of approximately 25% to corporate HQ.</p><p>Responsible for system monitoring, configuration, upgrades, maintenance, performance optimization of multiple JD Edwards instances.</p><ul><li>Support several large global JDE systems hosts are: SQL Server and Oracle DB Servers including Oracle Exadata Servers.</li><li>Troubleshoot apps issues.</li></ul><p><strong>Required</strong></p><ul><li>Bachelor's degree</li><li>5+ years JDE E1 CNC experience</li><li>JDE installs, set-ups, configurations, package builds, deployments</li><li>JDE EnterpriseOne Technical Foundation tools</li><li>Admin JDE EnterpriseOne Java Web and HTML Server</li><li>Experience with SQL Server and Oracle databases</li><li>Excellent technical knowledge and experience in server administration and networks</li><li>Windows and Linux/UNIX experience</li></ul><p><strong>Plusses (not required)</strong></p><ul><li>Oracle and SQL database experience</li><li>Windows Clustering</li><li>Exadata experience</li><li>Understanding of Oracle RAC/DataGuard architecture</li><li>Tidal Scheduler experience</li><li>JDE UPK</li><li>Administration experience on Linux/UNIX ++</li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "sDP6-u5ZQBSEnT-mJwyVQA",
     "url": "https://remote.co/job/coder-i/",
     "title": "Coder I",
@@ -83,6 +279,51 @@
     "published": "Sep 26, 2018 5:06:52 PM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "<h2>Press Assistant at <span>National School Choice Week - NSCW</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span></div><div>            <ul><li>National School Choice Week is searching for&nbsp;<strong>temporary press assistants</strong> to help promote National School Choice Week (January 20-26, 2019) to the media and to the public.</li><li>Responsibilities will include writing, editing, and distributing press releases and media advisories to promote independently-planned events held during the Week and assisting with booking media appearances for National School Choice Week spokespeople.</li><li>The contractor will be paid a monthly retainer or an hourly fee, depending on the contractor’s preference.</li><li>As a contractor, individual will be responsible for setting her/his own hours and place of work, but must be available during business hours to respond to e-mail.</li><li>The contract will be limited in scope and run from October 2018 to February 2019.</li></ul><p>To be considered for this contract, please send either a resume and cover letter or a brief proposal (2 pages, maximum) outlining your previous experience in media relations and writing and your requested monthly retainer or hourly fee, to Shelby Doyle at shelby at schoolchoiceweek.com.</p><p>Held every January, National School Choice Week shines a positive spotlight on effective education options for children, including traditional public schools, public charter schools, magnet schools, online learning, private schools, and homeschooling. In 2018, the Week featured 32,240 independently-planned events and activities. Don’t miss the opportunity to work for the world’s largest annual celebration of opportunity in education.</p>        </div><div>        <a href='mailto:shelby@schoolchoiceweek.com?subject=Application%20via%20%22Press%20Assistant%22%20listing%20on%20https%3A%2F%2Fremote.co' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "nQ3NqbaaRkWWyUlG48Fcnw",
+    "url": "http://www.indeed.com/viewjob?jk=bf9865df7123a972",
+    "title": "Remote ETL Developer - IIS-Consulting - Don, WV",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "IIS-Consulting",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 10,
+      "maxValue": 30,
+      "info": "Contract",
+      "unit": "HOUR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 26, 2018 1:19:13 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
